--- a/public/index.html
+++ b/public/index.html
@@ -279,21 +279,7 @@
             
       <div class="row justify-content-center">
         <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-          <h3 class="schedule-month">2022/04</h3>
-        </div>
-        <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-          <div class="btn-group" role="group" aria-label="Schedule Contents">
-            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=1262377007&single=true"
-            role="button" class="btn btn-outline-primary" target="_blank">html版</a>
-            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=1262377007&single=true&output=pdf"
-            role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="row justify-content-center">
-        <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-          <h3 class="schedule-month">2022/05</h3>
+          <h3 class="schedule-month">2022年 05月</h3>
         </div>
         <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
           <div class="btn-group" role="group" aria-label="Schedule Contents">
@@ -304,6 +290,21 @@
           </div>
         </div>
       </div>
+
+      <div class="row justify-content-center">
+        <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+          <h3 class="schedule-month">2022年 06月</h3>
+        </div>
+        <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+          <div class="btn-group" role="group" aria-label="Schedule Contents">
+            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=1745732402&single=true"
+            role="button" class="btn btn-outline-primary" target="_blank">html版</a>
+            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=1745732402&single=true&output=pdf"
+            role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
+          </div>
+        </div>
+      </div>
+
       
     </div>
   </section>
