お問い合わせフォームをメールに変更

--- a/public/index.html
+++ b/public/index.html
@@ -772,87 +772,21 @@
   <section class="site-section border-bottom bg-light" id="contact-section" data-aos="fade">
     <div class="container">
       <div class="row mb-5">
-        <div class="col-12 text-center">
-          <h1 class="section-title mb-3" data-aos="fade-up" data-aos-delay="">お問い合わせ</h1>
-          <p class="lead" data-aos="fade-up" data-aos-delay="100">
-            体験入部、練習試合の申込は、お問い合わせフォームからお願いします。
-          </P>
-          <noscript>
-            <p>
-              <font color="red">
-                (注) Javascript が有効になっていないため、正常に送信できない可能性があります。
-                <a href="https://forms.gle/8Tzf69oQN6PSnqtn7" target="_blank">
-                  お問合せフォーム
-                </a>
-                をご利用ください。
-              </font>
-            </p>
-          </noscript>
+        <div class="col-12 text-center" data-aos="fade">
+          <h1 class="section-title mb-0">お問い合わせ</h1>
+          <p><a href="#team-trial">体験入部</a>や練習試合は随時受け付けております。対象学年(キッズ、小学１～６年生、少女)を明記し、メールにてご連絡ください。</p>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-md-12 mb-5">
-
-          <form class="p-5 bg-white">
-            <div class="row form-group">
-              <div class="col-md-6">
-                <label class="text-black" for="name">名前</label>
-                <input type="text" id="name" class="form-control" name="name">
-              </div>
-
-              <div class="col-md-6">
-                <label class="text-black" for="email">Email</label>
-                <input type="email" id="email" class="form-control" name="email">
-              </div>
-            </div>
-
-            <div class="row form-group">
-
-              <div class="col-md-6">
-                <label class="text-black" for="subject">件名</label>
-                <input type="subject" id="subject" class="form-control" name="subject">
-              </div>
-              <div class="col-md-6">
-                <label class="text-black" for="grade">学年</label>
-                <select name="grade" class="form-control" class="custom-select">
-                  <option value="grade_1">１年生</option>
-                  <option value="grade_2">２年生</option>
-                  <option value="grade_3">３年生</option>
-                  <option value="grade_4">４年生</option>
-                  <option value="grade_5">５年生</option>
-                  <option value="grade_6">６年生</option>
-                  <option value="grade_girls">少女（レジーナ）</option>
-                  <option value="grade_kids">キッズ（年中・年長）</option>
-                  <option value="grade_other">その他</option>
-                </select>
-              </div>
-            </div>
-
-            <div class="row form-group">
-              <div class="col-md-12">
-                <label class="text-black" for="message">本文</label>
-                <textarea name="message" id="message" cols="30" rows="7" class="form-control"
-                  maxlength="1000"></textarea>
-                <label class="text-black" for="message">※ 最大文字数は 1000文字となります。最大文字数を超える場合は
-                  <a href="https://forms.gle/8Tzf69oQN6PSnqtn7" target="_blank">
-                    お問合せフォーム
-                  </a>
-                  をご利用ください。
-                </label>
-              </div>
-            </div>
-
-            <div class="row form-group">
-              <div class="col-md-12">
-                <input type="submit" value="送信" class="btn btn-primary btn-md text-white">
-              </div>
-            </div>
-
-
-          </form>
+      <div class="row mb-5">
+        <div class="col-md-12 text-center">
+          <p class="mb-4">
+            <a href="mailto:info@fcnakahara.net" target="_blank">
+              <span class="icon-envelope-o d-block h4 text-primary"></span>
+              <span><b>info@fcnakahara.net</b></span>
+            </a>
+          </p>
         </div>
-
       </div>
 
     </div>
