--- a/public/index.html
+++ b/public/index.html
@@ -545,6 +545,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2022.06.25] かわしん杯 ホワイト：ベスト8 ブルー：ベスト16</li>
                   <li>- [2022.03.06] 長谷工PREMIER LEAGUE Kanagawa U-9 優勝</li>
                   <li>- [2021.11.23] Ｎリーグ（Aリーグ） 優勝</li>
                   <li>- [2021.09.11] Ｎリーグ（Ｂリーグ） 優勝</li>
