--- a/public/index.html
+++ b/public/index.html
@@ -647,6 +647,8 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2022.07.31] FC. JUNTOS CUP 優勝</li>
+                  <li>- [2022.07.02] 第39回川崎市春季低学年大会 ベスト8</li>
                   <li>- [2022.05.03] 川崎市中原区春季低学年大会（区長杯） 準優勝</li>
                   <li>- [2021.11.23] ラゾクラック杯1年生大会 優勝</li>
                 </ul>
