JPG のファイル名大文字小文字を念のため修正。fc2011 の画像パスが異なるため元に戻す。

--- a/public/index.html
+++ b/public/index.html
@@ -431,7 +431,7 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2010_202109.jpg" alt="Image" class="img-fluid team-photo">
+                <img src="images/fc2010_202109.JPG" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
@@ -487,7 +487,7 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2011_20201103_resize.jpg" alt="Image" class="img-fluid team-photo">
+                <img src="images/fc2011_20201103_2.JPG" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
@@ -543,7 +543,7 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2012_20201025.jpg" alt="Image" class="img-fluid team-photo">
+                <img src="images/fc2012_20201025.JPG" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
@@ -593,7 +593,7 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2013_20210905.jpg" alt="Image" class="img-fluid team-photo">
+                <img src="images/fc2013_20210905.JPG" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
@@ -643,7 +643,7 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2014_04.jpg" alt="Image" class="img-fluid team-photo">
+                <img src="images/fc2014_04.JPG" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
@@ -688,7 +688,7 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2015.jpg" alt="Image" class="img-fluid team-photo">
+                <img src="images/fc2015.JPG" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
