FC2015 戦績を追記

--- a/public/index.html
+++ b/public/index.html
@@ -692,7 +692,11 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>- </li>
+                  <li>- [2022.05.05] ラゾクラック杯 準優勝</li>
+                  <li>- [2022.07.18] YSGEM CUP 準優勝</li>
+                  <li>- [2022.07.30] JUNTOS CUP 優勝</li>
+                  <li>- [2022.10.23] バディ杯チャレンジカップ 3位</li>
+                  <li>- [2022.11.03] 明治安田生命CUP 準優勝</li>
                 </ul>
               </div>
             </div>
