--- a/public/index.html
+++ b/public/index.html
@@ -150,6 +150,13 @@
         <div class="row justify-content-center">
 
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+            <h4 class="info-date">2023.1.10</h4>
+          </div>
+          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+            最新のチームエンブレムを反映いたしました。
+          </div>
+
+          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
             <h4 class="info-date">2022.4.12</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
