--- a/public/index.html
+++ b/public/index.html
@@ -554,6 +554,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2023.01.29] 日産CUP 低学年の部 ブロック大会：優勝　中央大会：ベスト16</li>
                   <li>- [2022.11.19] 第41回小田原カップサッカーフェスティバル U10 優勝</li>
                   <li>- [2022.06.25] かわしん杯 ホワイト：ベスト8 ブルー：ベスト16</li>
                   <li>- [2022.03.06] 長谷工PREMIER LEAGUE Kanagawa U-9 優勝</li>
