--- a/public/index.html
+++ b/public/index.html
@@ -658,6 +658,9 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2023.01.15] 立川FC AZZURROカップ　準優勝</li>
+                  <li>- [2022.12.18] メリオールカップ　優勝</li>
+                  <li>- [2022.12.17] さぎぬま杯　準優勝</li>
                   <li>- [2022.09.04] 2022年 平間カップ 2年生大会　優勝</li>
                   <li>- [2022.07.31] FC. JUNTOS CUP 優勝</li>
                   <li>- [2022.07.02] 第39回川崎市春季低学年大会 ベスト8</li>
