--- a/public/index.html
+++ b/public/index.html
@@ -659,6 +659,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2023.02.18] SAGAWA CUP 2022/23 U-8　準優勝</li>
                   <li>- [2023.01.15] 立川FC AZZURROカップ　準優勝</li>
                   <li>- [2022.12.18] メリオールカップ　優勝</li>
                   <li>- [2022.12.17] さぎぬま杯　準優勝</li>
