--- a/public/index.html
+++ b/public/index.html
@@ -708,11 +708,13 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>- [2022.05.05] ラゾクラック杯 準優勝</li>
-                  <li>- [2022.07.18] YSGEM CUP 準優勝</li>
-                  <li>- [2022.07.30] JUNTOS CUP 優勝</li>
-                  <li>- [2022.10.23] バディ杯チャレンジカップ 3位</li>
+                  <li>- [2023.03.04] 第15回 R.F.C CUP 優勝</li>
+                  <li>- [2023.02.23] 多摩ジュニア杯 U7大会 優勝</li>
                   <li>- [2022.11.03] 明治安田生命CUP 準優勝</li>
+                  <li>- [2022.10.23] バディ杯チャレンジカップ 3位</li>
+                  <li>- [2022.07.30] JUNTOS CUP 優勝</li>
+                  <li>- [2022.07.18] YSGEM CUP 準優勝</li>
+                  <li>- [2022.05.05] ラゾクラック杯 準優勝</li>
                 </ul>
               </div>
             </div>
