--- a/public/index.html
+++ b/public/index.html
@@ -636,9 +636,9 @@
                   <button type="button" class="btn btn-secondary">2023年</button>
                   <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTYQiR5PrxHP892oNuFbbXPIGj1C3kelErLed2TRPpczSsd6PNdxIRtqq3n5XcUAQ/pubhtml" role="button"
                     target="_blank">2022年</a>
-                  <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2013/result/result2.htm" role="button"
+                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/10EfLHKy8uSX3uJJWxUHqR5aoeKXA1foC/edit#gid=973153223" role="button"
                     target="_blank">2021年</a>
-                  <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2013/result/result1.htm" role="button"
+                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/11eMii3xYRBOEO0490xQ1oTh9JTQCOggo/edit#gid=973153223" role="button"
                     target="_blank">2020年</a>
                 </div>
               </div>
