--- a/public/index.html
+++ b/public/index.html
@@ -636,9 +636,9 @@
                   <button type="button" class="btn btn-secondary">2023年</button>
                   <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTYQiR5PrxHP892oNuFbbXPIGj1C3kelErLed2TRPpczSsd6PNdxIRtqq3n5XcUAQ/pubhtml" role="button"
                     target="_blank">2022年</a>
-                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/10EfLHKy8uSX3uJJWxUHqR5aoeKXA1foC/edit#gid=973153223" role="button"
+                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQE7nJO92VjU6dhzwvqe-NeJ1GtCQ7N7m88SZtmbQlFxQVqvDiPF-X8Um0piXlXaQ/pubhtml" role="button"
                     target="_blank">2021年</a>
-                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/11eMii3xYRBOEO0490xQ1oTh9JTQCOggo/edit#gid=973153223" role="button"
+                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQJVBltGACNcZxgX7fuBbYO_OuAilYTecDWwyRKKTrvIO3Xw-aHmlD--t5a-da6ow/pubhtml" role="button"
                     target="_blank">2020年</a>
                 </div>
               </div>
