2023年度に対応しました。

--- a/public/index.html
+++ b/public/index.html
@@ -150,17 +150,10 @@
         <div class="row justify-content-center">
 
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2023.1.10</h4>
+            <h4 class="info-date">2023.4.1</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            最新のチームエンブレムを反映いたしました。
-          </div>
-
-          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2022.4.12</h4>
-          </div>
-          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            新年度 (2022年度) に対応いたしました。
+            新年度 (2023年度) に対応いたしました。
           </div>
         </div>
       </div>
@@ -437,62 +430,6 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2010_202109.jpg" alt="Image" class="img-fluid team-photo">
-              </div>
-              <div class="col-lg-6 col-md-7">
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>- [2022.05.05] 斎藤旗杯 3位</li>
-                  <li>- [2022.01.22] 川崎ケーブルテレビ杯新人戦 ベスト16</li>
-                  <li>- [2021.10.16] ハンガリー大使館杯 3位</li>
-                  <li>- [2021.03.31] ジャパンカップ 優勝</li>
-                  <li>- [2020.11] かわしん杯 ブルー：ベスト8 ホワイト：ベスト16</li>
-                  <li>- [2020.08.16] カルペソールサマーカップ 優勝</li>
-                  <li>- [2020.07.23] 全力蹴球カップ 準優勝</li>
-                  <li>- [2020.02.09] セルジオ越後杯 準優勝</li>
-                  <li>- [2020.01.13] 大豆戸カップ 優勝</li>
-                  <li>- [2019.12.08] U-9川崎市秋季サッカー大会 ベスト８</li>
-                  <li>- [2019.10.20] アントラーズautumn festival 優勝</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="card-footer">
-            <div class="row justify-content-center">
-              <div class="col-lg-3 col-md-5 card-footer-title">
-                各年度の試合結果
-              </div>
-              <div class="col-lg-6 col-md-7">
-                <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
-                  <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSP6tMP0sCqVee4DWb7qjiKsdRgOST0VePOJJB4b5Vxhqy5E6TkQKNxKtwuCltz2w/pubhtml?gid=1634873165&single=true"
-                    role="button" target="_blank">2022年</a>
-                  <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSzxx10-oc3nKnlxtXZW36fwnEgfU3P3hQmFEQiowjMMz452yZpSH4RRSSHLZsHaQ/pubhtml?gid=1634873165&single=true"
-                    role="button" target="_blank">2021年</a>
-                  <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTSuoQfroGv0MpTd5zXev_Wm9tyuKU80r0sZZe7l4EMUtB5EoaplrXiqdoL48E7Ww/pubhtml?gid=1634873165&single=true"
-                    role="button" target="_blank">2020年</a>
-                  <a class="btn btn-primary" href="result/fc2010/result/result3.htm" role="button"
-                    target="_blank">2019年</a>
-                  <a class="btn btn-primary" href="result/fc2010/result/result2.htm" role="button"
-                    target="_blank">2018年</a>
-                  <a class="btn btn-primary" href="result/fc2010/result/result1.htm" role="button"
-                    target="_blank">2017年</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="card-result" id="result_5">
-        <div class="card mb-4 shadow-sm" data-aos="fade-up">
-          <div class="card-header">
-            <h3>5年生</h3>
-          </div>
-          <div class="card-body text-primary">
-            <div class="row justify-content-center">
-              <div class="col-lg-6 col-md-5 team-photo-box">
                 <img src="images/fc2011_20201103_2.jpg" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
@@ -522,8 +459,10 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
-                  <button type="button" class="btn btn-secondary">2023年</button>
-                 <a class="btn btn-primary"
+                  <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/1-PXnOeXrF0WuhOGsP3M9n0qnupoomRqY-fNdnYK7nJ4/edit#gid=0"
+                    role="button" target="_blanky">2023年</a>
+                  <a class="btn btn-primary"
                     href="https://docs.google.com/spreadsheets/d/1-PXnOeXrF0WuhOGsP3M9n0qnupoomRqY-fNdnYK7nJ4/edit#gid=0"
                     role="button" target="_blanky">2022年</a>
                   <a class="btn btn-primary"
@@ -543,10 +482,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_4">
+      <div class="card-result" id="result_5">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>4年生</h3>
+            <h3>5年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -579,7 +518,8 @@
               <div class="col-lg-6 col-md-7">
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                   <button type="button" class="btn btn-secondary">2024年</button>
-                  <button type="button" class="btn btn-secondary">2023年</button>
+                  <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result4.htm" role="button"
+                    target="_blank">2023年</a>
                   <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result4.htm" role="button"
                     target="_blank">2022年</a>
                   <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result3.htm" role="button"
@@ -595,10 +535,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_3">
+      <div class="card-result" id="result_4">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>3年生</h3>
+            <h3>4年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -633,7 +573,8 @@
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                   <button type="button" class="btn btn-secondary">2025年</button>
                   <button type="button" class="btn btn-secondary">2024年</button>
-                  <button type="button" class="btn btn-secondary">2023年</button>
+                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTYQiR5PrxHP892oNuFbbXPIGj1C3kelErLed2TRPpczSsd6PNdxIRtqq3n5XcUAQ/pubhtml" role="button"
+                    target="_blank">2023年</a>
                   <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTYQiR5PrxHP892oNuFbbXPIGj1C3kelErLed2TRPpczSsd6PNdxIRtqq3n5XcUAQ/pubhtml" role="button"
                     target="_blank">2022年</a>
                   <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQE7nJO92VjU6dhzwvqe-NeJ1GtCQ7N7m88SZtmbQlFxQVqvDiPF-X8Um0piXlXaQ/pubhtml" role="button"
@@ -647,10 +588,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_2">
+      <div class="card-result" id="result_3">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>2年生</h3>
+            <h3>3年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -682,7 +623,9 @@
                   <button type="button" class="btn btn-secondary">2026年</button>
                   <button type="button" class="btn btn-secondary">2025年</button>
                   <button type="button" class="btn btn-secondary">2024年</button>
-                  <button type="button" class="btn btn-secondary">2023年</button>
+                  <a class="btn btn-primary"
+                    href="https://drive.google.com/file/d/1IhX0vLAP2815RBg5NuIPcyxWKIon197e/view?usp=share_link"
+                    role="button" target="_blank">2023年</a>
                   <a class="btn btn-primary"
                     href="https://drive.google.com/file/d/1IhX0vLAP2815RBg5NuIPcyxWKIon197e/view?usp=share_link"
                     role="button" target="_blank">2022年</a>
@@ -696,10 +639,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_1">
+      <div class="card-result" id="result_2">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>1年生</h3>
+            <h3>2年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -730,10 +673,50 @@
                   <button type="button" class="btn btn-secondary">2026年</button>
                   <button type="button" class="btn btn-secondary">2025年</button>
                   <button type="button" class="btn btn-secondary">2024年</button>
-                  <button type="button" class="btn btn-secondary">2023年</button>
+                  <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQml-50awLDy2Yq22UaStZcolrfhVFlPaIyzptU23drQNhz1G2M7ms8Fq7vt5Ujov4MGhnlOraJeJKI/pubhtml?gid=0&single=true"
+                    role="button" target="_blank">2023年</a>
                   <a class="btn btn-primary"
                     href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQml-50awLDy2Yq22UaStZcolrfhVFlPaIyzptU23drQNhz1G2M7ms8Fq7vt5Ujov4MGhnlOraJeJKI/pubhtml?gid=0&single=true"
                     role="button" target="_blank">2022年</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-result" id="result_1">
+        <div class="card mb-4 shadow-sm" data-aos="fade-up">
+          <div class="card-header">
+            <h3>1年生</h3>
+          </div>
+          <div class="card-body text-primary">
+            <div class="row justify-content-center">
+              <div class="col-lg-6 col-md-5 team-photo-box">
+                <!--<img src="" alt="Image" class="img-fluid team-photo">-->
+                Comming Soon...
+              </div>
+              <div class="col-lg-6 col-md-7">
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>- </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="card-footer">
+            <div class="row justify-content-center">
+              <div class="col-lg-3 col-md-5 card-footer-title">
+                各年度の試合結果
+              </div>
+              <div class="col-lg-6 col-md-7">
+                <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
+                  <button type="button" class="btn btn-secondary">2028年</button>
+                  <button type="button" class="btn btn-secondary">2027年</button>
+                  <button type="button" class="btn btn-secondary">2026年</button>
+                  <button type="button" class="btn btn-secondary">2025年</button>
+                  <button type="button" class="btn btn-secondary">2024年</button>
+                  <button type="button" class="btn btn-secondary">2023年</button>
                 </div>
               </div>
             </div>
