--- a/public/index.html
+++ b/public/index.html
@@ -675,7 +675,7 @@
                   <button type="button" class="btn btn-secondary">2025年</button>
                   <button type="button" class="btn btn-secondary">2024年</button>
                   <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQml-50awLDy2Yq22UaStZcolrfhVFlPaIyzptU23drQNhz1G2M7ms8Fq7vt5Ujov4MGhnlOraJeJKI/pubhtml?gid=0&single=true"
+                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQml-50awLDy2Yq22UaStZcolrfhVFlPaIyzptU23drQNhz1G2M7ms8Fq7vt5Ujov4MGhnlOraJeJKI/pubhtml?gid=882885954&single=true"
                     role="button" target="_blank">2023年</a>
                   <a class="btn btn-primary"
                     href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQml-50awLDy2Yq22UaStZcolrfhVFlPaIyzptU23drQNhz1G2M7ms8Fq7vt5Ujov4MGhnlOraJeJKI/pubhtml?gid=0&single=true"
