1年生戦績URL を追加

--- a/public/index.html
+++ b/public/index.html
@@ -717,7 +717,9 @@
                   <button type="button" class="btn btn-secondary">2026年</button>
                   <button type="button" class="btn btn-secondary">2025年</button>
                   <button type="button" class="btn btn-secondary">2024年</button>
-                  <button type="button" class="btn btn-secondary">2023年</button>
+                  <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vT90a-fI6P6ZAiRQ2IhLT5HAfP2hsmKp3l1iEU7WbxHhP--7uFWRDIUeLn5WuXgpJr8RMFGl8bf8C_4/pubhtml?gid=0&single=true"
+                    role="button" target="_blank">2023年</a>
                 </div>
               </div>
             </div>
