--- a/public/index.html
+++ b/public/index.html
@@ -494,6 +494,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2023.06.25] 第35回八王子いちょう杯 5年生大会 優勝</li>
                   <li>- [2022-23 season] Colorful LEAGUE U-10：優勝</li>
                   <li>- [2023.01.29] 日産CUP 低学年の部 ブロック大会：優勝　中央大会：ベスト16</li>
                   <li>- [2022.11.19] 第41回小田原カップサッカーフェスティバル U10 優勝</li>
