FC中原 2016 1年生の写真を追加

--- a/public/index.html
+++ b/public/index.html
@@ -696,8 +696,7 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <!--<img src="" alt="Image" class="img-fluid team-photo">-->
-                Comming Soon...
+                <img src="images/fc2016_20230705.jpg" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
