1年生の戦績を追加

--- a/public/index.html
+++ b/public/index.html
@@ -700,7 +700,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>- </li>
+                  <li>- [2023.6.11] U-7 LHQ杯 優勝</li>
                 </ul>
               </div>
             </div>
