--- a/public/index.html
+++ b/public/index.html
@@ -150,10 +150,15 @@
         <div class="row justify-content-center">
 
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2023.4.1</h4>
+            <h4 class="info-date">2023.7.11</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            新年度 (2023年度) に対応いたしました。
+            <a href="#result_2">U8 (2年生)</a><br>
+              第40回川崎市低学年サッカー大会 にて 準優勝 となりました。<br>
+            <br>たくさんの応援、誠にありがとうございました。
+            <br>(当日の様子は <a href="https://www.instagram.com/p/Cuea2K1Bepv/?igshid=MzRlODBiNWFlZA%3D%3D"
+              target="_blank">FC中原 Instagram</a> でもご紹介しています)
+
           </div>
         </div>
       </div>
@@ -653,6 +658,8 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2023.07.08] 第40回川崎市低学年サッカー大会 準優勝</li>
+                  <li>- [2023.05.28] FC明浜カップ U8大会 準優勝</li>
                   <li>- [2023.03.04] 第15回 R.F.C CUP 優勝</li>
                   <li>- [2023.02.23] 多摩ジュニア杯 U7大会 優勝</li>
                   <li>- [2022.11.03] 明治安田生命CUP 準優勝</li>
