--- a/public/index.html
+++ b/public/index.html
@@ -554,6 +554,8 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2023.08.13] 富士住健CUP 御殿場ジュニアサッカー大会 3位</li>
+                  <li>- [2023.06.24] かわしん杯ジュニアサッカー大会 ベスト32</li>
                   <li>- [2022.12.17] 川崎ウィングス杯 準優勝</li>
                   <li>- [2022.09.11] リバーカップ 準優勝</li>
                   <li>- [2022.03.21] ラゾクラック杯2年生大会 準優勝</li>
@@ -580,7 +582,7 @@
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                   <button type="button" class="btn btn-secondary">2025年</button>
                   <button type="button" class="btn btn-secondary">2024年</button>
-                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTYQiR5PrxHP892oNuFbbXPIGj1C3kelErLed2TRPpczSsd6PNdxIRtqq3n5XcUAQ/pubhtml" role="button"
+                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQRtdBsWnQnUaW6PP84epTpyZAfxcWm_RnIBq237r2ZOit4QVVz78fHohd-QBLBQQ/pubhtml" role="button"
                     target="_blank">2023年</a>
                   <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTYQiR5PrxHP892oNuFbbXPIGj1C3kelErLed2TRPpczSsd6PNdxIRtqq3n5XcUAQ/pubhtml" role="button"
                     target="_blank">2022年</a>
