--- a/public/index.html
+++ b/public/index.html
@@ -555,7 +555,7 @@
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
                   <li>- [2023.08.13] 富士住健CUP 御殿場ジュニアサッカー大会 3位</li>
-                  <li>- [2023.06.24] かわしん杯ジュニアサッカー大会 ベスト32</li>
+                  <li>- [2023.06.24] かわしん杯 ブルー：ベスト16 ホワイト：ベスト32</li>
                   <li>- [2022.12.17] 川崎ウィングス杯 準優勝</li>
                   <li>- [2022.09.11] リバーカップ 準優勝</li>
                   <li>- [2022.03.21] ラゾクラック杯2年生大会 準優勝</li>
