1年生、2年生の主な戦績を追加

--- a/public/index.html
+++ b/public/index.html
@@ -660,12 +660,13 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2023.09.23] 第189回湘南チャレンジ杯 U8大会 優勝</li>
+                  <li>- [2023.09.17] Future Star CUP - 2023 Autumn Series U8大会 優勝</li>
                   <li>- [2023.07.08] 第40回川崎市低学年サッカー大会 準優勝</li>
                   <li>- [2023.05.28] FC明浜カップ U8大会 準優勝</li>
                   <li>- [2023.03.04] 第15回 R.F.C CUP 優勝</li>
                   <li>- [2023.02.23] 多摩ジュニア杯 U7大会 優勝</li>
                   <li>- [2022.11.03] 明治安田生命CUP 準優勝</li>
-                  <li>- [2022.10.23] バディ杯チャレンジカップ 3位</li>
                   <li>- [2022.07.30] JUNTOS CUP 優勝</li>
                   <li>- [2022.07.18] YSGEM CUP 準優勝</li>
                   <li>- [2022.05.05] ラゾクラック杯 準優勝</li>
@@ -709,7 +710,8 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>- [2023.6.11] U-7 LHQ杯 優勝</li>
+                  <li>- [2023.07.17] U-7 ラゾクラック杯 優勝</li>
+                  <li>- [2023.06.11] U-7 LHQ杯 優勝</li>
                 </ul>
               </div>
             </div>
