--- a/public/index.html
+++ b/public/index.html
@@ -499,6 +499,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2023.10.14] ハンガリー大使館杯 U-11川崎市秋季サッカー大会2023 3位</li>
                   <li>- [2023.06.25] 第35回八王子いちょう杯 5年生大会 優勝</li>
                   <li>- [2022-23 season] Colorful LEAGUE U-10：優勝</li>
                   <li>- [2023.01.29] 日産CUP 低学年の部 ブロック大会：優勝　中央大会：ベスト16</li>
