少女の写真および戦績を更新

--- a/public/index.html
+++ b/public/index.html
@@ -751,9 +751,10 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>- 第37回松村杯ＰＵＭＡカップ争奪秋季少年少女サッカー大会 準優勝</li>
-                  <li>- 第1回神奈川県少女サッカーフェスティバル　Dブロック　優勝</li>
-                  <li>- 第２５回川崎市春季少女サッカー大会 第３位</li>
+                  <li>- [2023.05.04]第30回 川崎市春季少女サッカー大会 4位</li>
+                  <li>- [2022.07.02]第29回 川崎市春季少女サッカー大会 3位</li>
+                  <li>- [2021.12.18]第40回 松村杯 PUMAカップ争奪 秋季少年少女サッカー大会 3位</li>
+                  <li>- [2020.11.01]第39回 松村杯 PUMAカップ争奪 秋季少年少女サッカー大会 準優勝</li>
                 </ul>
               </div>
             </div>
